Build against bundled libpcre

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+php5 (5.3.6-8ubuntu0ppa5) natty; urgency=low
+
+  * Fixed Natty builds
+  * Use PHP bundled PCRE
+
 php5 (5.4.0-0ubuntu0ppa1) maverick; urgency=low
 
   * Remove all sorts of weird patches
